force-app/main/default/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Agreement</fullName>
            </value>
            <value>
                <fullName>RERA Cert</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Driving Lincence</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>