force-app/main/default/objects/Document__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>